# xp_pilot

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  RELEASE.md  build.sh  install.sh  setup.sh
.github/workflows/: build.yml
build-sanitize/: Makefile  cmake_install.cmake
build-sanitize/tests/: Makefile  cmake_install.cmake
data/: flight_logger_profiles.json
src/: auto_qnh.cpp  auto_qnh.hpp  auto_qnh_logic.hpp  flight_logger.cpp  flight_logger.hpp  html_report.cpp  html_report.hpp  logbook_ui.cpp  logbook_ui.hpp  main.cpp  rain_blocker.cpp  rain_blocker.hpp  settings.hpp
tests/: CMakeLists.txt  test_auto_qnh_logic.cpp  test_html_report.cpp
tests/fixtures/: sample_flight.json
